@@ -49,6 +49,9 @@
 /* Define if you have the <unistd.h> header file.  */
 #undef HAVE_UNISTD_H
 
+/* Define if strerror is not declared in system header files. */
+#undef NEED_DECLARATION_STRERROR
+
 /* Define if <sys/procfs.h> has lwpid_t. */
 #undef HAVE_LWPID_T
 
